--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         <ImageView
             android:layout_width="64dp"
             android:layout_height="64dp"
-            app:srcCompat="@drawable/ig_back"/>
+            app:srcCompat="@drawable/ig_back" />
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="64dp"
@@ -142,7 +142,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="0dp"
